added data.table functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,3 +10,4 @@ importFrom("dplyr", "select", "filter", "mutate", "left_join")
 importFrom("tidyr", "separate")
 importFrom("tibble", "as_tibble")
 importFrom("magrittr", "%>%")
+importFrom("data.table", ":=", "setkeyv")
