--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,5 +9,6 @@ importFrom("stringr", "str_detect")
 importFrom("dplyr", "select", "filter", "mutate", "left_join")
 importFrom("tidyr", "separate")
 importFrom("tibble", "as_tibble")
+importFrom("lubridate", "date")
 importFrom("magrittr", "%>%")
 importFrom("data.table", ":=", "setkeyv")
